--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "build": "quasar build",
     "build:pwa": "quasar build -m pwa",
     "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "deploy": "gh-pages -d spa "
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "gh-pages": "^3.2.3",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "homepage": "https://zahrahkm.github.io/zahrahkm.github.io"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
